vl53l0x/build/log/idf_py_stdout_output_16620
[1/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/antonio/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/mnt/c/Users/Antonio/Documents/GitHub/pruebas_tfg/vl53l0x/build/config -I/mnt/c/Users/Antonio/Documents/GitHub/pruebas_tfg/vl53l0x/main -I/home/antonio/esp/esp-idf/components/newlib/platform_include -I/home/antonio/esp/esp-idf/components/freertos/config/include -I/home/antonio/esp/esp-idf/components/freertos/config/include/freertos -I/home/antonio/esp/esp-idf/components/freertos/config/xtensa/include -I/home/antonio/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/antonio/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/antonio/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/antonio/esp/esp-idf/components/freertos/esp_additions/include -I/home/antonio/esp/esp-idf/components/esp_hw_support/include -I/home/antonio/esp/esp-idf/components/esp_hw_support/include/soc -I/home/antonio/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/antonio/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/antonio/esp/esp-idf/components/heap/include -I/home/antonio/esp/esp-idf/components/log/include -I/home/antonio/esp/esp-idf/components/soc/include -I/home/antonio/esp/esp-idf/components/soc/esp32 -I/home/antonio/esp/esp-idf/components/soc/esp32/include -I/home/antonio/esp/esp-idf/components/hal/platform_port/include -I/home/antonio/esp/esp-idf/components/hal/esp32/include -I/home/antonio/esp/esp-idf/components/hal/include -I/home/antonio/esp/esp-idf/components/esp_rom/include -I/home/antonio/esp/esp-idf/components/esp_rom/include/esp32 -I/home/antonio/esp/esp-idf/components/esp_rom/esp32 -I/home/antonio/esp/esp-idf/components/esp_common/include -I/home/antonio/esp/esp-idf/components/esp_system/include -I/home/antonio/esp/esp-idf/components/esp_system/port/soc -I/home/antonio/esp/esp-idf/components/esp_system/port/include/private -I/home/antonio/esp/esp-idf/components/xtensa/esp32/include -I/home/antonio/esp/esp-idf/components/xtensa/include -I/home/antonio/esp/esp-idf/components/xtensa/deprecated_include -I/home/antonio/esp/esp-idf/components/lwip/include -I/home/antonio/esp/esp-idf/components/lwip/include/apps -I/home/antonio/esp/esp-idf/components/lwip/include/apps/sntp -I/home/antonio/esp/esp-idf/components/lwip/lwip/src/include -I/home/antonio/esp/esp-idf/components/lwip/port/include -I/home/antonio/esp/esp-idf/components/lwip/port/freertos/include -I/home/antonio/esp/esp-idf/components/lwip/port/esp32xx/include -I/home/antonio/esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/antonio/esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/antonio/esp/esp-idf/components/driver/include -I/home/antonio/esp/esp-idf/components/driver/deprecated -I/home/antonio/esp/esp-idf/components/driver/analog_comparator/include -I/home/antonio/esp/esp-idf/components/driver/dac/include -I/home/antonio/esp/esp-idf/components/driver/gpio/include -I/home/antonio/esp/esp-idf/components/driver/gptimer/include -I/home/antonio/esp/esp-idf/components/driver/i2c/include -I/home/antonio/esp/esp-idf/components/driver/i2s/include -I/home/antonio/esp/esp-idf/components/driver/ledc/include -I/home/antonio/esp/esp-idf/components/driver/mcpwm/include -I/home/antonio/esp/esp-idf/components/driver/parlio/include -I/home/antonio/esp/esp-idf/components/driver/pcnt/include -I/home/antonio/esp/esp-idf/components/driver/rmt/include -I/home/antonio/esp/esp-idf/components/driver/sdio_slave/include -I/home/antonio/esp/esp-idf/components/driver/sdmmc/include -I/home/antonio/esp/esp-idf/components/driver/sigma_delta/include -I/home/antonio/esp/esp-idf/components/driver/spi/include -I/home/antonio/esp/esp-idf/components/driver/temperature_sensor/include -I/home/antonio/esp/esp-idf/components/driver/touch_sensor/include -I/home/antonio/esp/esp-idf/components/driver/twai/include -I/home/antonio/esp/esp-idf/components/driver/uart/include -I/home/antonio/esp/esp-idf/components/driver/usb_serial_jtag/include -I/home/antonio/esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/antonio/esp/esp-idf/components/esp_pm/include -I/home/antonio/esp/esp-idf/components/esp_ringbuf/include -I/home/antonio/esp/esp-idf/components/esp_timer/include -I/home/antonio/esp/esp-idf/components/nvs_flash/include -I/home/antonio/esp/esp-idf/components/spi_flash/include -I/home/antonio/esp/esp-idf/components/esp_partition/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/mnt/c/Users/Antonio/Documents/GitHub/pruebas_tfg/vl53l0x=. -fmacro-prefix-map=/home/antonio/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /mnt/c/Users/Antonio/Documents/GitHub/pruebas_tfg/vl53l0x/main/main.c
/mnt/c/Users/Antonio/Documents/GitHub/pruebas_tfg/vl53l0x/main/main.c: In function 'i2c_init_simple':
/mnt/c/Users/Antonio/Documents/GitHub/pruebas_tfg/vl53l0x/main/main.c:566:38: error: 'I2C_MASTER_PORT_NUM' undeclared (first use in this function); did you mean 'I2C_MASTER_LAST_NACK'?
  566 |     esp_err_t ret = i2c_param_config(I2C_MASTER_PORT_NUM, &conf);
      |                                      ^~~~~~~~~~~~~~~~~~~
      |                                      I2C_MASTER_LAST_NACK
/mnt/c/Users/Antonio/Documents/GitHub/pruebas_tfg/vl53l0x/main/main.c:566:38: note: each undeclared identifier is reported only once for each function it appears in
/mnt/c/Users/Antonio/Documents/GitHub/pruebas_tfg/vl53l0x/main/main.c: In function 'test_i2c_final':
/mnt/c/Users/Antonio/Documents/GitHub/pruebas_tfg/vl53l0x/main/main.c:685:46: error: 'I2C_MASTER_PORT_NUM' undeclared (first use in this function); did you mean 'I2C_MASTER_LAST_NACK'?
  685 |         esp_err_t ret = i2c_master_cmd_begin(I2C_MASTER_PORT_NUM, cmd, 500 / portTICK_PERIOD_MS);
      |                                              ^~~~~~~~~~~~~~~~~~~
      |                                              I2C_MASTER_LAST_NACK
/mnt/c/Users/Antonio/Documents/GitHub/pruebas_tfg/vl53l0x/main/main.c: In function 'i2c_init_simple':
/mnt/c/Users/Antonio/Documents/GitHub/pruebas_tfg/vl53l0x/main/main.c:570:1: error: control reaches end of non-void function [-Werror=return-type]
  570 | }
      | ^
cc1: some warnings being treated as errors
[2/9] Performing build step for 'bootloader'
[1/1] cd /mnt/c/Users/Antonio/Documents/GitHub/pruebas_tfg/vl53l0x/build/bootloader/esp-idf/esptool_py && /home/antonio/.espressif/python_env/idf5.2_py3.12_env/bin/python /home/antonio/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /mnt/c/Users/Antonio/Documents/GitHub/pruebas_tfg/vl53l0x/build/bootloader/bootloader.bin
Bootloader binary size 0x6850 bytes. 0x7b0 bytes (7%) free.
ninja: build stopped: subcommand failed.
